# socha

./: .gitignore  .prettierrc  Anchor.toml  Cargo.toml  README.md  cli.ts  next.config.js  package-lock.json  package.json  tsconfig.json
keys/: airdrop.json  socha.json
programs/airdrop/: Cargo.toml
programs/airdrop/src/: lib.rs
programs/socha/: Cargo.toml
programs/socha/src/: actions.rs  error.rs  lib.rs  state.rs
programs/socha/src/actions/: close_round.rs  create_round.rs  donate.rs  init.rs  transfer_round.rs  update_round.rs  withdraw.rs
src/components/: Campaign.tsx  CreateCampaign.tsx  Header.tsx  HomePage.tsx  Layout.tsx  Wallet.tsx  common.tsx
src/idl/: anchor_airdrop_program.ts  anchor_socha_program.ts
src/lib/: cx.ts
src/pages/: _app.tsx  create.tsx  index.tsx
src/pages/campaign/: [pubkey].tsx
src/styles/: HomePage.module.scss  campaign.scss  create.scss  globals.scss  home.scss
src/web3/: airdrop.ts  consts.ts  index.ts  spl-token.ts  transaction.ts
src/web3/socha/: bufferToString.ts  index.ts  program.ts
